cmake_minimum_required(VERSION 3.30)
project(remote_control_car C)

set(CMAKE_C_STANDARD 11)

include_directories(Hardware)
include_directories(Library)
include_directories(Start)
include_directories(System)
include_directories(User)

add_executable(remote_control_car
    Hardware/Key.c
    Hardware/Key.h
    Hardware/LED.c
    Hardware/LED.h
    Hardware/Motor.c
    Hardware/Motor.h
    Hardware/OLED.c
    Hardware/OLED.h
    Hardware/OLED_Font.h
    Hardware/PWM.c
    Hardware/PWM.h
    Hardware/PWMDJ.c
    Hardware/PWMDJ.h
    Hardware/Serial.c
    Hardware/Serial.h
    Hardware/Servo.c
    Hardware/Servo.h
    Library/misc.c
    Library/misc.h
    Library/stm32f10x_adc.c
    Library/stm32f10x_adc.h
    Library/stm32f10x_bkp.c
    Library/stm32f10x_bkp.h
    Library/stm32f10x_can.c
    Library/stm32f10x_can.h
    Library/stm32f10x_cec.c
    Library/stm32f10x_cec.h
    Library/stm32f10x_crc.c
    Library/stm32f10x_crc.h
    Library/stm32f10x_dac.c
    Library/stm32f10x_dac.h
    Library/stm32f10x_dbgmcu.c
    Library/stm32f10x_dbgmcu.h
    Library/stm32f10x_dma.c
    Library/stm32f10x_dma.h
    Library/stm32f10x_exti.c
    Library/stm32f10x_exti.h
    Library/stm32f10x_flash.c
    Library/stm32f10x_flash.h
    Library/stm32f10x_fsmc.c
    Library/stm32f10x_fsmc.h
    Library/stm32f10x_gpio.c
    Library/stm32f10x_gpio.h
    Library/stm32f10x_i2c.c
    Library/stm32f10x_i2c.h
    Library/stm32f10x_iwdg.c
    Library/stm32f10x_iwdg.h
    Library/stm32f10x_pwr.c
    Library/stm32f10x_pwr.h
    Library/stm32f10x_rcc.c
    Library/stm32f10x_rcc.h
    Library/stm32f10x_rtc.c
    Library/stm32f10x_rtc.h
    Library/stm32f10x_sdio.c
    Library/stm32f10x_sdio.h
    Library/stm32f10x_spi.c
    Library/stm32f10x_spi.h
    Library/stm32f10x_tim.c
    Library/stm32f10x_tim.h
    Library/stm32f10x_usart.c
    Library/stm32f10x_usart.h
    Library/stm32f10x_wwdg.c
    Library/stm32f10x_wwdg.h
    Start/core_cm3.c
    Start/core_cm3.h
    Start/stm32f10x.h
    Start/system_stm32f10x.c
    Start/system_stm32f10x.h
    System/Delay.c
    System/Delay.h
    User/main.c
    User/stm32f10x_conf.h
    User/stm32f10x_it.c
    User/stm32f10x_it.h)
